--- a/requirements.yml
+++ b/requirements.yml
@@ -15,3 +15,4 @@ implicit:
   - Наименования товара, его описание должны изменяться с учетом выбранной страны
   - Стоимость товара должна пересчитываться в зависимости от выбранной страны
   - Боковая панель меню должна предоставлять выбор из всех возможных значений, а не только содержащихся на конкретной странице
+  - Таблиа заказа должна сожержать названия столбцов
